--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -13,7 +15,8 @@
 }
 
 .moving-text {
-  animation: moveText 15s linear infinite;
+  padding-left: 50%;
+  animation: moveText 20s linear infinite;
 }
 
 .moving-text:hover {
